# usd-mar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindSubprocessh.cmake
src/: CMakeLists.txt
src/usdmar/: CMakeLists.txt  config.h.in  debug.h  plugInfo.json  registry.cpp  registry.h  resolver.cpp  resolver.h  solverStack.cpp  solverStack.h  utils.cpp  utils.h
src/usdmar/solvers/: env.cpp  env.h  format.cpp  format.h  rest.cpp  rest.h  subprocess.cpp  subprocess.h  subsolver.h  symlink.cpp  symlink.h
src/usdmar/testenv/: CMakeLists.txt
src/usdmar/testenv/resources/: config.json  main.usda  pig.usda
